Update dependencies and build scripts